# potyczki_2024

./: .python-version  pyproject.toml  test.txt
src/alc/: alc.py
src/kto/: kto.py
src/lam/: lam.py
src/lid/: lid.py
src/mro/: mro.py
src/obr/: obr.py
src/resources/: tester.py
src/zna/: zna.py
tests/alc/: test.out  test_1.out  test_alc.py  tets_1.in
tests/kto/: test.in  test_1.in  test_kto.py
tests/lam/: test.in  test.out  test_lam.py
tests/lid/: 1.in  11.in  16.in  17.in  18.in  2.in  21.in  22.in  23.in  24.in  25.in  26.in  27.in  28.in  29.in  30.in  31.in  32.in  34.in  35.in  37.in  39.in  4.in  40.in  42.in  44.in  45.in  46.in  47.in  48.in  50.in  51.in  52.in  53.in  55.in  57.in  6.in  60.in  61.in  62.in  (+28 more)
tests/mro/: test_1.out  test_2.in  test_2.out  test_3.in  test_mro.py
tests/obr/: test_obr.py
tests/zna/: test.out  test_2.in  test_2.out  test_zna.py
